Add task render logic + active project state logic

--- a/src/template.html
+++ b/src/template.html
@@ -126,13 +126,21 @@
                                     <button type="button" class="current">
                                         high
                                     </button>
-                                    <button type="button" class="edit-btn">
+                                    <button
+                                        type="button"
+                                        class="edit-btn"
+                                        id="task-edit"
+                                    >
                                         <img
                                             src="./edit-one.svg"
                                             alt="edit-one"
                                         />
                                     </button>
-                                    <button type="button" class="edit-btn">
+                                    <button
+                                        type="button"
+                                        class="edit-btn"
+                                        id="task-del"
+                                    >
                                         <img src="./trash.svg" alt="trash" />
                                     </button>
                                 </div>
