Add editing and completing logic

--- a/src/template.html
+++ b/src/template.html
@@ -52,17 +52,18 @@
                         </div>
                         <div class="tasks-status">
                             <div class="status">
-                                <img src="./circle.svg" alt="circle" /><span
-                                    >0</span
-                                >
-                                active
+                                <img src="./circle.svg" alt="circle" />
+                                <h3><span id="active-count">0</span> active</h3>
                             </div>
                             <div class="status">
                                 <img
                                     src="./check-circle.svg"
                                     alt="check-circle"
-                                /><span>0</span>
-                                completed
+                                />
+                                <h3>
+                                    <span id="completed-count">0</span>
+                                    completed
+                                </h3>
                             </div>
                         </div>
                     </div>
